Implementar reportes dinámicos, corregir errores de fecha y mejorar gestión de sucursales.
- Actualizar Reportes.razor para obtener sucursales dinámicamente.
- Corregir error de DateTime Kind=Local en repositorios para compatibilidad con PostgreSQL.
- Agregar campo 'Codigo' a la entidad Branch y DTOs relacionados.
- Mejoras generales y correcciones.

--- a/src/Blanquita.Web/appsettings.json
+++ b/src/Blanquita.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlanquitaDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Database=BlanquitaDb;Username=postgres;Password=Blanquita.123"
   },
   "FoxPro": {
     "Pos10041Path": "",
