--- a/src/Blanquita.Infrastructure/Blanquita.Infrastructure.csproj
+++ b/src/Blanquita.Infrastructure/Blanquita.Infrastructure.csproj
@@ -13,11 +13,11 @@
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="DbfDataReader" Version="0.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="QuestPDF" Version="2025.12.1" />
   </ItemGroup>
 
